# Mindexa

./: .gitignore  AGENTS.md  GEMINI.md  docker-compose.yml  package-lock.json
backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  celerybeat-schedule.bak  celerybeat-schedule.dir  check_cols.py  check_cols_aq.py  check_db.py  check_tables.py  check_test_db.py  confirm_schema.py  docker-compose.yml  drop_enums.py  pyproject.toml  requirements.txt  server_log.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260408_1609_1a4e32bbe1e5_initial_schema.py  20260425_1315_2c4235959041_sync_user_profile_fields.py  20260426_1916_dcea50b274d1_refactor_base_models_and_mixins.py  20260426_1944_6887123f7ad9_refactor_base_models_and_mixins_v2.py  20260428_1129_877efb5d92e9_sync_password_reset_token_schema.py  20260428_1131_2b71cfeb0bca_fix_timezone_aware_datetimes.py  20260428_1132_109338c360e1_fix_assessment_supervisor_timezone.py  20260428_1551_657e7c035ded_add_missing_attempt_statuses.py  20260428_1555_70966d28b322_fix_more_timezones.py  20260428_1602_a76a168cf7e7_fix_response_log_timezone.py  20260430_1233_6fe3243b818c_add_profile_fields_and_statuses.py  20260502_1104_21fa16226673_rename_marks_allocated_to_allocated_.py
backend/app/: main.py
backend/app/api/: middleware.py
backend/app/api/routes/: health.py
backend/app/core/: cache.py  celery_app.py  config.py  constants.py  exceptions.py  handlers.py  logger.py  logging.py  permissions.py  redis.py  security.py  seed.py  storage.py
backend/app/core/ai/: question_generator.py
backend/app/db/: base.py  enums.py  mixins.py  session.py
backend/app/db/models/: __init__.py  academic.py  ai.py  assessment.py  attempt.py  audit.py  auth.py  integrity.py  notification.py  question.py  resource.py  result.py
backend/app/db/repositories/: ai_generation_repo.py  assessment_repo.py  attempt_repo.py  auth.py  base.py  blueprint_repo.py  course_repo.py  grading_repo.py  integrity_repo.py  notification_repo.py  question_repo.py  result_repo.py  (+1 more)
backend/app/dependencies/: __init__.py  auth.py
backend/app/middleware/: logging.py  rate_limit.py  security_headers.py
backend/app/schemas/: admin.py  ai_generation.py  assessment.py  attempt.py  blueprint.py  gemini.py  grading.py  integrity.py  lecturer.py  notification.py  question.py  result.py  student.py  submission.py
backend/app/scripts/: seed_db.py
backend/app/services/: admin_service.py  ai_generation_service.py  assessment_service.py  attempt_service.py  auth_service.py  blueprint_service.py  email_service.py  gemini_service.py  grading_service.py  integrity_service.py  lecturer_service.py  question_service.py  result_service.py  student_service.py  submission_service.py
backend/app/utils/: pagination.py  response.py  validators.py
backend/app/workers/: celery_app.py  tasks.py
backend/scratch/: check_db.py  check_users.py  fix_db.py  list_courses.py  seed_questions.py  test_api.py  test_enum.py  test_lecturer.py  test_pydantic.py  test_validate.py
backend/scripts/db/: init.sql
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_health.py
backend/tests/unit/: test_security.py
(+163 files in other folders)
