[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindexa-backend"
version = "0.1.0"
description = "Mindexa Platform – Secure Academic Assessment Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # ── Web Framework ────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # ── Database ─────────────────────────────────────────────────────
    "sqlmodel>=0.0.19",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pgvector>=0.2.5",

    # ── Validation & Settings ─────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.7.0",

    # ── Auth & Security ───────────────────────────────────────────────
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.3",

    # ── Redis & Caching ───────────────────────────────────────────────
    "redis[hiredis]>=5.0.4",
    "hiredis>=2.3.2",

    # ── Background Tasks ─────────────────────────────────────────────
    "celery[redis]>=5.4.0",
    "flower>=2.0.1",

    # ── AI / LLM Layer ────────────────────────────────────────────────
    "langchain>=0.2.0",
    "langchain-openai>=0.1.8",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",

    # ── Document Processing (RAG) ─────────────────────────────────────
    "pymupdf>=1.24.3",
    "python-docx>=1.1.2",
    "python-pptx>=0.6.23",
    "pillow>=10.3.0",

    # ── HTTP Client ───────────────────────────────────────────────────
    "httpx>=0.27.0",

    # ── Email ────────────────────────────────────────────────────────
    "fastapi-mail>=1.4.1",

    # ── Rate Limiting ─────────────────────────────────────────────────
    "slowapi>=0.1.9",

    # ── Logging & Monitoring ─────────────────────────────────────────
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=2.3.1",

    # ── Utilities ─────────────────────────────────────────────────────
    "python-slugify>=8.0.4",
    "arrow>=1.3.0",
    "shortuuid>=1.0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-env>=1.1.5",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.2.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T20", "RET", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401", "S101", "COM812"]
exclude = ["alembic/versions/"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]
